# devops

./: LICENSE  README.md  TF.md
.github/workflows/: app_python.yml
ansible/: development.txt  dvops_lab_key_pair.pem
ansible/playbooks/: app-deployment.yml  install_docker.yml
ansible/roles/app-deployment/tasks/: main.yml
ansible/roles/app-deployment/templates/: docker-compose.yml
ansible/roles/app-deployment/vars/: main.yml
app_python/: CI.md  DOCKER.md  Dockerfile  PYTHON.md  app.py  pyproject.toml  requirements.txt
app_python/jenkins/: Jenkinsfile
app_python/tests/: conftest.py  test_app.py  test_availability.py
k8/: 13.md  14.md  deployment.yml  my-app-0.1.0.tgz  service.yml
k8/my-app/: values.yaml
k8/my-app/files/: config.json
k8/my-app/templates/: config.yaml  deployment.yaml  secrets.yaml  statefulset.yaml
k8/my-app/web/: web.yaml
monitoring/: LOGGING.md  METRICS.md  docker-compose.yml  prometheus.yml
